<resources>
    <string name="app_name">CookBook</string>

    <string name="title_recommend">三餐推荐</string>
    <string name="title_combination">智能组菜</string>
    <string name="title_takephoto">拍照识别</string>
    <string name="title_collection">收藏</string>
    <string name="title_information">个人中心</string>

    <string name="recommend_toolbar_search_text">搜索菜谱、食材</string>
    <string name="recommend_toolbar_title_text">三餐推荐</string>


    <string name="takephoto_takephoto_button_text">拍照识菜</string>
    <string name="takephoto_share_button_text">分享</string>


    <string name="collection_toolbar_title">收藏</string>
    <string name="collection_record">浏览菜谱查阅记录</string>


    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="menu_defualt_fragment_steps">制作步骤:</string>
    <string name="menu_defualt_fragment_materials">材料:</string>
    <string name="menu_defualt_fragment_look_more">查看全部>></string>
    <string name="menu_defualt_fragment_nutrition_know">营养早知道:</string>
    <string name="menu_defualt_fragment_rank_first">第一步</string>


    <string name="my_information_test_name">ScorpioMiku</string>
    <string name="my_information_my_dynamic">我的动态</string>
    <string name="my_information_dynamic_circle">动态圈</string>
    <string name="my_information_setting">帐号信息设置</string>
    <string name="my_information_concrol">帐号管理</string>
    <string name="my_information_draft">草稿箱</string>
    <string name="my_information_basket">菜篮子</string>
    <string name="my_information_help">帮助</string>


    <string name="change_information_image">头像</string>
    <string name="change_information_sex">性别</string>
    <string name="change_information_account">帐号</string>
    <string name="change_information_name">昵称</string>
    <string name="change_information_birthday">生日</string>
    <string name="change_information_place">所在地</string>
    <string name="change_information_tool_bar_title">帐号信息设置</string>
    <string name="change_information_button">修改</string>


    <string name="combination_toolbar_title_text">智能组菜</string>
    <string name="combination_toolbar_search_text">输入菜名</string>
    <string name="combination_tastes">口味</string>


    <string name="recommend_matirial">配料：</string>


    <string name="dynamic_toolbar_title">动态圈</string>
    <string name="my_dynamic_toolbar_title">我的动态</string>


    <string name="help_title">帮助</string>
    <string name="help_strings1">如有任何建议请发送信息至邮箱 wang1056992492@gmail.com </string>
    <string name="help_strings2">APP由中北大学安卓实验室识菜帮小组制作，未经小组同意不得进行任何商业活动</string>
    <string name="help_strings3">APP源码已上传github 地址为：https://github.com/wangtianrui/CookBook </string>


    <string name="create_basket_title">添加额外需要购买的菜</string>
    <string name="create_basket_search_hint">输入菜名或备注</string>
    <string name="create_basket_text_hint">输入内容（不同材料名请换行输入）</string>
    <string name="create_basket_cancel_button">取消</string>
    <string name="create_basket_save_button">保存</string>


    <string name="recommend_menu_fragment_title">菜谱分类</string>
    <string name="recommend_menu_text_taste">口味</string>
    <string name="recommend_menu_text_kind">菜系</string>
    <string name="recommend_menu_text_place">场景</string>


    <string name="sign_in_title">登陆</string>
    <string name="sign_in_account_text">账号/邮箱</string>
    <string name="sign_in_password_text">密码</string>
    <string name="sign_in_remember">记住密码</string>
    <string name="sign_in_forget">忘记密码?</string>
    <string name="sign_in_sign_up_text">新用户注册</string>

</resources>
