<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_recommend"
        android:icon="@drawable/recommend_menu_ico"
        android:title="@string/title_recommend"/>

    <item
        android:id="@+id/navigation_combination"
        android:icon="@drawable/combination_menu_ico"
        android:title="@string/title_combination"/>

    <item
        android:id="@+id/navigation_takephoto"
        android:icon="@drawable/ic_photo_camera_black_24dp"
        android:title="@string/title_takephoto"/>
    <item
        android:id="@+id/navigation_collection"
        android:icon="@drawable/ic_collection_black_24dp"
        android:title="@string/title_collection"/>
    <item
        android:id="@+id/navigation_information"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_information"/>

</menu>
