<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.scorpiomiku.cookbook.sign.SignInActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/toolbar_and_menu_color"
        app:contentInsetStart="0dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sign_in_title"
            android:textColor="@color/colorWhite"
            android:textSize="20sp">

        </TextView>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="130dp"/>

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/sign_in_account_text"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/sign_in_password_text"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <Button
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:text="@string/sign_in_title"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">


                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:text="@string/sign_in_remember"
                    android:textColor="@color/stringsColor"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:textSize="11sp"
                    android:text="@string/sign_in_forget"/>


            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="290dp"
            android:layout_height="130dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/sign_in_sign_up_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/sign_in_sign_up_text"
                android:textColor="@color/sign_up_text_color"
                android:textSize="13sp"/>
        </RelativeLayout>


    </LinearLayout>

</LinearLayout>
