<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.scorpiomiku.cookbook.ownInformation.InformationChangeActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/toolbar_and_menu_color"
        app:contentInsetStart="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/change_information_tool_bar_title"
            android:textColor="@color/colorWhite"
            android:textSize="20sp">

        </TextView>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/change_information_image"
            android:textSize="15dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/holderimage"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"/>

        <ImageView
            android:id="@+id/change_information_account_image_view"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_toLeftOf="@+id/holderimage"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/change_information_name"
            android:textSize="15dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/holdername"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"/>

        <EditText
            android:id="@+id/change_information_name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_toLeftOf="@+id/holdername"
            android:background="@null"
            android:enabled="false"
            android:gravity="center"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/change_information_account"
            android:textSize="15dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/holderaccount"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"/>

        <EditText
            android:id="@+id/change_information_account_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_toLeftOf="@+id/holderaccount"
            android:background="@null"
            android:enabled="false"
            android:gravity="center"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/change_information_sex"
            android:textSize="15dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/holdersex"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"/>

        <EditText
            android:id="@+id/change_information_sex_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_toLeftOf="@+id/holdersex"
            android:background="@null"
            android:enabled="false"
            android:gravity="center"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/change_information_birthday"
            android:textSize="15dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/holderbirthday"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"/>

        <EditText
            android:id="@+id/change_information_birthday_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_toLeftOf="@+id/holderbirthday"
            android:background="@null"
            android:enabled="false"
            android:gravity="center"

            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/change_information_place"
            android:textSize="15dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/holderplace"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"/>

        <EditText
            android:id="@+id/change_information_place_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_toLeftOf="@+id/holderplace"
            android:background="@null"
            android:enabled="false"
            android:gravity="center"

            />

    </RelativeLayout>

    <TextView
        android:layout_width="1dp"
        android:layout_height="30dp"/>

    <Button
        android:id="@+id/change_information_change_button"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@color/colorRed"
        android:text="@string/change_information_button"
        android:textColor="@color/colorWhite"/>
</LinearLayout>
