<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dynamic_background_color"
    android:orientation="vertical"
    tools:context="com.scorpiomiku.cookbook.basket.CreateNewBasketActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/toolbar_and_menu_color"
        app:contentInsetStart="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/create_basket_title"
            android:textColor="@color/colorWhite"
            android:textSize="20sp">

        </TextView>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:padding="10dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="23dp"
            >

            <EditText
                android:id="@+id/create_basket_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/search_view_background"
                android:cursorVisible="false"
                android:gravity="center"
                android:hint="@string/create_basket_search_hint"/>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/stringsColor"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/stringsColor"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite">

                <EditText
                    android:id="@+id/create_basket_material_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/create_basket_text_hint"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/stringsColor"/>
            </RelativeLayout>


        </LinearLayout>

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/stringsColor"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <Button
            android:id="@+id/create_basket_cancel_button"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:background="@color/colorHolder"
            android:text="@string/create_basket_cancel_button"/>

        <Button
            android:id="@+id/create_basket_save_button"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_alignParentEnd="true"
            android:background="@color/saveButton"
            android:text="@string/create_basket_save_button"/>
    </RelativeLayout>
</LinearLayout>
